basic gtest added

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(hello inc/hello.cpp)
+add_library(hello STATIC inc/hello.cpp)
 add_executable(main main.cpp)
 
 target_link_libraries(main hello)
