LLVM and GDB debug VSCODE

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
-            "name": "Debug",
+            "type": "lldb-mi",
+            "request": "launch",
+            "name": "LLDB",
+            "target": "bin/main",
+            "cwd": "${workspaceRoot}"
+        },
+        {
+            "name": "GDB",
             "type": "gdb",
             "request": "launch",
-            "target": "build/src/main",
+            "target": "bin/main",
             "cwd": "${workspaceRoot}"
         }
     ]
