--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_library(hello STATIC inc/hello.cpp)
+add_library(player STATIC inc/player.cpp)
+add_library(log STATIC inc/Log.cpp)
+
 add_executable(main main.cpp)
 
-target_link_libraries(main hello)
+target_link_libraries(main
+    player
+    log
+)
