--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ endif ((NOT PROJECT_NAME))
 project(${PROJECT_NAME} C CXX)
 message (STATUS "${CMAKE_PROJECT_NAME}")
 set(${CMAKE_PROJECT_NAME}_SUMMARY               "A simple CMAKE and CXX template")
-set(${CMAKE_PROJECT_NAME}_VENDOR_NAME           "Trim Bresilla")
+set(${CMAKE_PROJECT_NAME}_VENDOR_NAME           "bresilla")
 set(${CMAKE_PROJECT_NAME}_VENDOR_CONTACT        "trim.bresilla@gmail.com")
 set(${CMAKE_PROJECT_NAME}_VERSION_MAJOR         0)
 set(${CMAKE_PROJECT_NAME}_VERSION_MINOR         1)
@@ -43,8 +43,6 @@ include(Warnings)
 include(Coverage)
 include(Packaging)
 include(Doxygen)
-# include(Conan)
-# include(LTO)
 
 include(CTest)
 include(GNUInstallDirs)
