--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,15 +6,10 @@ add_executable(${TEST_BINARY} test_one.cpp)
 target_compile_features(${TEST_BINARY} PRIVATE cxx_std_17)
 target_link_libraries(${TEST_BINARY} PRIVATE doctest)
 
-# add it globally
-# include_directories(${DOCTEST_INCLUDE_DIR})
-# or per target
-target_include_directories(${TEST_BINARY} PUBLIC ${DOCTEST_INCLUDE_DIR})
+# add_test(
+    # NAME ${TEST_BINARY}
+    # COMMAND ${EXECUTABLE_OUTPUT_PATH}/${TEST_BINARY}
+# )
 
-add_test(
-   NAME ${TEST_BINARY}
-   COMMAND ${EXECUTABLE_OUTPUT_PATH}/${TEST_BINARY}
-)
-
-
-# doctest_discover_tests(${TEST_BINARY} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+include(${PROJECT_PATH}/thrd/doctest/scripts/cmake/doctest.cmake)
+doctest_discover_tests(${TEST_BINARY})
