added hunter package manager

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
+            - lcov
             - g++-7
             - doxygen
       env:
@@ -34,5 +35,6 @@ script:
 
 after_success:
   - cd $PARENTDIR/build
-  - ctest
+  # - lcov --list coverage_out.info.cleaned
   - bash <(curl -s https://codecov.io/bash)
+  - ctest
