--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,6 @@
+#######################################################################
+#                   TESTING CMAKE
+#######################################################################
 include(CTest)
 
 set(TEST_BINARY ${PROJECT_NAME}_test)
