--- a/thrd/CMakeLists.txt
+++ b/thrd/CMakeLists.txt
@@ -1,3 +1,6 @@
+#######################################################################
+#                   THIRD PARTY LIB CMAKE
+#######################################################################
 set(BUILD_TESTING_BCKP ${BUILD_TESTING})
 set(BUILD_TESTING OFF CACHE BOOL "Force disable of tests for external dependencies" FORCE)
 
