--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
+#######################################################################
+#                 CMAKE
+#######################################################################
 ###### HUNTER PACKAGE MANAGER ######
 include(cmake/Hunter.cmake)
 HunterGate(
