better debug release optimisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,15 +10,22 @@ HunterGate(
 
 ###### GENERAL SETTINGS ######
 cmake_minimum_required(VERSION 3.10)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 set(PROJECT_NAME "cplate")
+project(${PROJECT_NAME})
 if((NOT PROJECT_NAME))
   message(FATAL_ERROR "Project name must be specified!")
+else()
+    message ("\nPROJECT: ${CMAKE_PROJECT_NAME}")
+    message ("BUILD TYPE: ${CMAKE_BUILD_TYPE}\n")
 endif ((NOT PROJECT_NAME))
 
-###### GENERAL FLAGS ######
-project(${PROJECT_NAME})
-message (STATUS "${CMAKE_PROJECT_NAME}")
+#CPP STANDARD OPTIONS
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+######  VARIABLES  ######
 set(${CMAKE_PROJECT_NAME}_SUMMARY               "A simple CMAKE and CXX template")
 set(${CMAKE_PROJECT_NAME}_VENDOR_NAME           "bresilla")
 set(${CMAKE_PROJECT_NAME}_VENDOR_CONTACT        "trim.bresilla@gmail.com")
@@ -34,36 +41,61 @@ set(TEST_SRC_PATH                              "${PROJECT_PATH}/test")
 set(EXTERNAL_PATH                              "${PROJECT_PATH}/thrd")
 set(DOXYGEN_PATH                               "${PROJECT_PATH}/docs")
 set(LIB_PATH                                   "${PROJECT_BINARY_DIR}/lib")
-set(LIB_NAME                                   "${PROJECT_NAME}")
 set(BIN_PATH                                   "${PROJECT_BINARY_DIR}/bin")
-set(MAIN_NAME                                  "${PROJECT_NAME}_main")
 set(TEST_PATH                                  "${PROJECT_BINARY_DIR}/test")
 set(TEST_NAME                                  "test_${PROJECT_NAME}")
 set(EXECUTABLE_OUTPUT_PATH                      ${BIN_PATH})
 set(LIBRARY_OUTPUT_PATH                         ${LIB_PATH})
 
+######  FLAGS  ######
 OPTION(BUILD_MAIN                              "Build main function"            ON)
 OPTION(BUILD_DOXYGEN_DOCS                      "Build Doxygen docs"             ON)
 OPTION(BUILD_SPHINX_DOCS                       "Build Doxygen docs with Sphinx" OFF)
 OPTION(BUILD_DEPENDENCIES                      "Force build of dependencies"    OFF)
+OPTION(ENABLE_COVERAGE                         "Enable teating coverage"        ON)
+OPTION(CPPCHECK_ENABLE                         "Enable cpp checking"            ON)
 
 
-####### ENABLE MODULES and TESTING ######
-include(Compiler)
-include(Buildtype)
+####### BUILD TYPE #######
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE "Release")
+endif()
+if(${PROJECT_SOURCE_DIR} STREQUAL ${PROJECT_BINARY_DIR})
+    message(FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there.")
+endif()
+string(TOLOWER "${CMAKE_BUILD_TYPE}" cmake_build_type_tolower)
+if(NOT cmake_build_type_tolower STREQUAL "debug" AND
+   NOT cmake_build_type_tolower STREQUAL "release" AND
+   NOT cmake_build_type_tolower STREQUAL "minsizerel" AND
+   NOT cmake_build_type_tolower STREQUAL "relwithdebinfo")
+    message(FATAL_ERROR "Unknown build type \"${CMAKE_BUILD_TYPE}\". Allowed values are Debug, Release, RelWithDebInfo, and MinSizeRel (case-insensitive).")
+endif()
+
 include(Warnings)
-include(Coverage)
-include(Packaging)
-include(CppCheck)
+if(cmake_build_type_tolower STREQUAL "release")
+    set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -Wno-unknown-pragmas -Wno-sign-compare -Woverloaded-virtual -Wwrite-strings -Wno-unused")
+    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+    include(LTO)
+    include(Packaging)
+endif()
+if(cmake_build_type_tolower STREQUAL "debug")
+    set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -Wno-unknown-pragmas -Wno-sign-compare -Woverloaded-virtual -Wwrite-strings -Wno-unused")
+    set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
+    set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g3")
+    include(CTest)
+    include(Coverage)
+endif()
 
-include(CTest)
-include(GNUInstallDirs)
-enable_testing()
 
 
 #SUBDIRECTORIES (they must have their own CMakeLists.txt)
 add_subdirectory(${PROJECT_SOURCE_DIR}/src)
-add_subdirectory(${PROJECT_SOURCE_DIR}/test)
-add_subdirectory(${PROJECT_SOURCE_DIR}/docs)
 add_subdirectory(${PROJECT_SOURCE_DIR}/thrd EXCLUDE_FROM_ALL)
+
+if(cmake_build_type_tolower STREQUAL "debug")
+    enable_testing()
+    add_subdirectory(${PROJECT_SOURCE_DIR}/test)
+    add_subdirectory(${PROJECT_SOURCE_DIR}/docs)
+endif()
+
 
