--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,22 +2,19 @@
 #                   TESTING CMAKE
 #######################################################################
 include(CTest)
+include(CMakeDependentOption)
 
 set(BUILD_TESTING_BCKP ${BUILD_TESTING})
 set(BUILD_TESTING OFF CACHE BOOL "Force disable of tests for external dependencies" FORCE)
 set(CUSTOM_COVERAGE_EXCLUDE ${CUSTOM_COVERAGE_EXCLUDE} "external" PARENT_SCOPE) # Replaced in CTestCustom.cmake.in
+list(APPEND LCOV_REMOVE_PATTERNS "'${PROJECT_SOURCE_DIR}/thrd/*'") #exclude from coverage
 
 
-set(TEST_BINARY ${PROJECT_NAME}_test)
-add_executable(${TEST_BINARY} test_one.cpp)
+set(TEST_1 ${PROJECT_NAME}_test_one)
+add_executable(${TEST_1} test_one.cpp)
+target_link_libraries(${TEST_1} PRIVATE doctest)
 
-target_compile_features(${TEST_BINARY} PRIVATE cxx_std_17)
-target_link_libraries(${TEST_BINARY} PRIVATE doctest)
-
-# add_test(
-    # NAME ${TEST_BINARY}
-    # COMMAND ${EXECUTABLE_OUTPUT_PATH}/${TEST_BINARY}
-# )
+add_coverage(${TEST_1})
 
 include(${PROJECT_PATH}/thrd/doctest/scripts/cmake/doctest.cmake)
-doctest_discover_tests(${TEST_BINARY})
+doctest_discover_tests(${TEST_1})
