--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,9 +4,9 @@
 ###### ADD THE MAIN FILE as EXECUTABLE ######
 add_executable(${PROJECT_NAME} main.cpp)
 #enable coverage if debugged
-if(DEBUGGING)
-    add_coverage(${PROJECT_NAME})
-endif()
+# if(DEBUGGING)
+    # add_coverage(${PROJECT_NAME})
+# endif()
 
 
 ###### INTERNAL LIBRARIES ######
