--- a/.travis.yml
+++ b/.travis.yml
@@ -14,18 +14,14 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - lcov
-            - libcurl4-openssl-dev
-            - libelf-dev
-            - libdw-dev
-            - binutils-dev
-            - libiberty-dev
+            - kcov
             - g++-7
             - doxygen
       env:
         - MATRIX_EVAL="CXX_COMPILER=g++-7; sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-7 90"
 
-before_script:
-  - wget https://github.com/SimonKagstrom/kcov/archive/v36.tar.gz && tar xzf v36.tar.gz && mkdir kcov-36/build && cd kcov-36/build && cmake .. && make && sudo make install
+# before_script:
+  # - wget https://github.com/SimonKagstrom/kcov/archive/v36.tar.gz && tar xzf v36.tar.gz && mkdir kcov-36/build && cd kcov-36/build && cmake .. && make && sudo make install
 
 before_install:
   - eval "${MATRIX_EVAL}"
