--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,14 +33,15 @@ set(${CMAKE_PROJECT_NAME}_VERSION_MINOR         1)
 set(${CMAKE_PROJECT_NAME}_VERSION_PATCH         0)
 set(PROJECT_VERSION                             "${${CMAKE_PROJECT_NAME}_VERSION_MAJOR}.${${CMAKE_PROJECT_NAME}_VERSION_MINOR}.${${CMAKE_PROJECT_NAME}_VERSION_PATCH}")
 set(PROJECT_PATH                               "${CMAKE_CURRENT_SOURCE_DIR}")
+set(PROJECT_BUILD                              "${PROJECT_BINARY_DIR}")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}     "${PROJECT_PATH}/cmake")
-set(INCLUDE_PATH                               "${PROJECT_PATH}/src")
 set(SRC_PATH                                   "${PROJECT_PATH}/src")
 set(TEST_SRC_PATH                              "${PROJECT_PATH}/test")
 set(EXTERNAL_PATH                              "${PROJECT_PATH}/thrd")
 set(DOXYGEN_PATH                               "${PROJECT_PATH}/docs")
 set(LIB_PATH                                   "${PROJECT_BINARY_DIR}/lib")
 set(BIN_PATH                                   "${PROJECT_BINARY_DIR}/bin")
+set(INCLUDE_PATH                               "${PROJECT_BINARY_DIR}/include")
 set(TEST_PATH                                  "${PROJECT_BINARY_DIR}/test")
 set(TEST_NAME                                  "test_${PROJECT_NAME}")
 set(EXECUTABLE_OUTPUT_PATH                      ${BIN_PATH})
@@ -48,6 +49,7 @@ set(LIBRARY_OUTPUT_PATH                         ${LIB_PATH})
 
 ######  FLAGS  ######
 OPTION(BUILD_MAIN                              "Build main function"            ON)
+OPTION(BUILD_TESTS                             "Build test units"               ON)
 OPTION(BUILD_DOXYGEN_DOCS                      "Build Doxygen docs"             ON)
 OPTION(BUILD_SPHINX_DOCS                       "Build Doxygen docs with Sphinx" OFF)
 OPTION(BUILD_DEPENDENCIES                      "Force build of dependencies"    OFF)
@@ -96,11 +98,35 @@ endif()
 
 
 #SUBDIRECTORIES (they must have their own CMakeLists.txt)
-add_subdirectory(${PROJECT_SOURCE_DIR}/src)
-add_subdirectory(${PROJECT_SOURCE_DIR}/thrd EXCLUDE_FROM_ALL)
 
 if(DEBUGGING)
     enable_testing()
     add_subdirectory(${PROJECT_SOURCE_DIR}/test)
     add_subdirectory(${PROJECT_SOURCE_DIR}/docs)
 endif()
+add_subdirectory(${PROJECT_SOURCE_DIR}/thrd EXCLUDE_FROM_ALL)
+add_subdirectory(${PROJECT_SOURCE_DIR}/src)
+
+
+
+##### WIP
+if(GIT_FOUND AND EXISTS "${PROJECT_PATH}/.git")
+# Update submodules as needed
+    option(GIT_SUBMODULE "Check submodules during build" ON)
+    if(GIT_SUBMODULE)
+        message(STATUS "Submodule update")
+        execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
+                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+                        RESULT_VARIABLE GIT_SUBMOD_RESULT)
+        execute_process(COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
+                WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
+                OUTPUT_VARIABLE PACKAGE_GIT_VERSION
+                ERROR_QUIET
+                OUTPUT_STRIP_TRAILING_WHITESPACE)
+        if(NOT GIT_SUBMOD_RESULT EQUAL "0")
+            message(FATAL_ERROR "git submodule update --init failed with ${GIT_SUBMOD_RESULT}, please checkout submodules")
+        endif()
+    endif()
+endif()
+
+
