--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,11 +15,14 @@ function (add_testing FILE)
     set(PATH ${CMAKE_CURRENT_SOURCE_DIR}/${FILE}.cpp)
     add_executable(${NAME} ${PATH})
     target_link_libraries(${NAME} PRIVATE doctest)
-    add_coverage(${NAME})
     add_test(NAME ${NAME} COMMAND ${EXECUTABLE_OUTPUT_PATH}/${NAME})
-    add_custom_command(TARGET ${NAME} POST_BUILD COMMAND kcov ${PROJECT_BINARY_DIR}/kcov ${PROJECT_BINARY_DIR}/bin/${NAME})
+    if(ENABLE_COVERAGE)
+        add_coverage(${NAME})
+        add_custom_command(TARGET ${NAME} POST_BUILD COMMAND kcov ${PROJECT_BINARY_DIR}/kcov ${PROJECT_BINARY_DIR}/bin/${NAME})
+    endif()
 endfunction(add_testing)
 
-
-add_testing(test_one)
-add_testing(test_two)
+if(BUILD_TESTS)
+    add_testing(test_one)
+    add_testing(test_two)
+endif()
