--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ matrix:
             - valgrind
             - clang-tidy
             - doxygen
-      env:
-        - MATRIX_EVAL="CXX_COMPILER=g++-7; sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-7 90"
+      # env:
+        # - MATRIX_EVAL="CXX_COMPILER=g++-7; sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-7 90"
 
 before_install:
   - eval "${MATRIX_EVAL}"
